# apistubs

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
src/apistubs/: __init__.py  apps.py  constants.py  helpers.py  logging.py  middleware.py  spec.py  stubs.py  urls.py
src/apistubs/data/specs/: ministubs.openapi.yaml
src/apistubs/dbpreset/: apps.py  models.py
src/apistubs/dbpreset/migrations/: 0001_initial.py  0002_auto_20240630_1641.py
src/apistubs/demo/: tests.api.json  tests.stubs.json  tests.stubs.yaml
src/apistubs/openapi/: middleware.py  stubforce.py
src/apistubs/templates/apistubs/: index.html  prompt.html
src/apistubs/tests/: __init__.py  test_helpers.py  test_views_common.py  test_views_prompt.py  test_views_settings.py  test_views_specification.py
src/apistubs/views/: common.py  logging.py  prompt.py  settings.py  stub.py
src/openapi/: middleware.py
standalone_django/: manage.py
standalone_django/standalone_django/: asgi.py  settings.py  urls.py  wsgi.py
standalone_fastapi/: README.md
